readme and minor changes to parameters

--- a/examples/simple-example/tsconfig.json
+++ b/examples/simple-example/tsconfig.json
@@ -20,6 +20,10 @@
     "jsx": "react"
   },
   "include": [
-    "src"
+    "src/**/*",
+    "../../src/**/*"
+  ],
+  "files": [
+    "WorldMap.tsx"
   ]
 }
