add border property and fix build for sample

--- a/examples/simple-example/tsconfig.json
+++ b/examples/simple-example/tsconfig.json
@@ -20,10 +20,6 @@
     "jsx": "react"
   },
   "include": [
-    "src/**/*",
-    "../../src/**/*"
-  ],
-  "files": [
-    "WorldMap.tsx"
+    "src"
   ]
 }
