--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-path-tooltip": "1.0.2",
     "react-scripts": "3.4.1",
+    "react-worldmap": "file:../..",
     "sass": "^1.26.5",
     "typescript": "^3.8.3"
   },
