--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -16,7 +16,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-path-tooltip": "1.0.2",
+    "react-path-tooltip": "^1.0.3",
     "react-scripts": "3.4.1",
     "react-worldmap": "file:../..",
     "sass": "^1.26.5",
