--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "peerDependencies": {
     "react": ">=16",
-    "react-path-tooltip": "1.0.2",
+    "react-path-tooltip": "^1.0.3",
     "@types/d3-geo": "^1.11.1",
     "d3-geo": "^1.11.9"
   },
@@ -46,8 +46,8 @@
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "d3-geo": "^1.11.9",
+    "react-path-tooltip": "^1.0.3",
     "husky": "^4.2.3",
-    "react-path-tooltip": "1.0.2",
     "tsdx": "^0.13.0",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
