--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-worldmap",
+  "name": "react-svg-worldmap",
   "version": "1.0.0",
   "license": "MIT",
   "displayName": "React Worldmap",
