--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "include": ["src", "types"],
   "compilerOptions": {
-    "module": "ESNext", // was esnext
+    "module": "ESNext", 
     "allowSyntheticDefaultImports": true, // new
     "lib": ["dom", "ESNext"], 
     "importHelpers": true, 
