--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
     # Run the build 
     - name: Run build
-      run: yarn install
+      run: npm install
 
     # Publish to npm
     - name: publish
