--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -1,7 +1,6 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -31,6 +30,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "files": [
+    "build"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
