--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -19,16 +19,13 @@
     "react-scripts": "3.4.1",
     "react-svg-worldmap": "^1.0.15",
     "sass": "^1.26.5",
-    "typescript": "^3.8.3",
-    "snyk": "^1.332.0"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "snyk": true
+  }
 }
