--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -15,9 +15,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-path-tooltip": "^1.0.7",
+    "react-path-tooltip": "^1.0.8",
     "react-scripts": "3.4.1",
-    "react-svg-worldmap": "^1.0.18",
+    "react-svg-worldmap": "1.0.19",
     "sass": "^1.26.7",
     "typescript": "^3.8.3"
   },
