--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -7,8 +7,8 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/d3-geo": "^1.11.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.32",
-    "@types/react": "^16.9.26",
+    "@types/node": "^12.12.47",
+    "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.5",
     "d3-geo": "^1.12.1",
     "fibers": "^5.0.0",
@@ -17,7 +17,7 @@
     "react-dom": "^16.13.1",
     "react-path-tooltip": "^1.0.8",
     "react-scripts": "3.4.1",
-    "react-svg-worldmap": "^1.0.21",
+    "react-svg-worldmap": "file:../..",
     "sass": "^1.26.7",
     "typescript": "^3.8.3"
   },
