--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-svg-worldmap",
-  "version": "1.0.23",
+  "version": "1.0.24",
   "license": "MIT",
   "displayName": "React Worldmap",
   "description": "A pure react component to draw a map of world countries. Simple. Free.",
@@ -21,7 +21,11 @@
   },
   "peerDependencies": {
     "react": ">=16",
+    "react-dom": ">=16.0.0"
+  },
+  "dependencies": {
     "react-path-tooltip": "^1.0.8",
+    "react-path-marker": "^1.0.4",
     "@types/d3-geo": "^1.11.1",
     "d3-geo": "^1.11.9"
   },
@@ -46,6 +50,7 @@
     "@types/react-dom": "^16.9.5",
     "d3-geo": "^1.12.1",
     "husky": "^4.2.3",
+    "react-path-marker": "^1.0.4",
     "react-path-tooltip": "^1.0.8",
     "tsdx": "^0.13.0",
     "tslib": "^1.11.1",
