--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -7,19 +7,19 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/d3-geo": "^1.11.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
-    "@types/react": "^16.9.38",
+    "@types/node": "^12.12.54",
+    "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.5",
     "d3-geo": "^1.12.1",
     "fibers": "^5.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-path-tooltip": "^1.0.8",
-    "react-scripts": "3.4.1",
+    "react-path-tooltip": "^1.0.9",
+    "react-scripts": "^3.4.3",
     "react-svg-worldmap": "^1.0.28",
-    "sass": "^1.26.7",
-    "typescript": "^3.8.3"
+    "sass": "^1.26.10",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
