--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^16.13.1",
     "react-path-tooltip": "^1.0.9",
     "react-scripts": "^3.4.3",
-    "react-svg-worldmap": "^1.0.28",
+    "react-svg-worldmap": "file:../..",
     "sass": "^1.26.10",
     "typescript": "^3.9.7"
   },
