--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-svg-worldmap",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "license": "MIT",
   "displayName": "React Worldmap",
   "description": "A pure react component to draw a map of world countries. Simple. Free.",
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "start": "tsdx watch",
+    "minify": "terser --compress --mangle --output ./dist/react-svg-worldmap.min.esm.js -- ./dist/react-svg-worldmap.esm.js",
     "build": "tsdx build --format esm",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
@@ -48,6 +49,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.5",
     "husky": "^4.2.3",
+    "terser": "^5.3.3",
     "tsdx": "^0.13.0",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
