--- a/examples/custom-style-example/package.json
+++ b/examples/custom-style-example/package.json
@@ -5,21 +5,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/d3-geo": "^1.11.1",
+    "@types/d3-geo": "^1.12.1",
     "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
-    "@types/react": "^16.9.38",
-    "@types/react-dom": "^16.9.5",
+    "@types/node": "^12.19.12",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
     "d3-geo": "^1.12.1",
     "fibers": "^5.0.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-path-tooltip": "^1.0.8",
-    "react-scripts": "3.4.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-path-tooltip": "^1.0.13",
+    "react-scripts": "^4.0.1",
     "react-svg-worldmap": "file:../..",
-    "sass": "^1.26.7",
-    "typescript": "^3.8.3"
+    "sass": "^1.32.4",
+    "typescript": "^3.9.7"
   },
   "scripts": {
     "start": "react-scripts start",
