--- a/examples/simple-example/package.json
+++ b/examples/simple-example/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^16.14.0",
     "react-path-tooltip": "^1.0.14",
     "react-scripts": "^3.4.4",
-    "react-svg-worldmap": "file:../..",
+    "react-svg-worldmap": "file:../../react-svg-worldmap-1.0.42.tgz",
     "typescript": "^3.9.7"
   },
   "scripts": {
