--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules/
 dist/
+bin/
 .firebase/
 yarn.lock
 **/.DS_Store
-examples/simple-example/package-lock.json
 package-lock.json
 **/log
 **/logs
