--- a/package/package.json
+++ b/package/package.json
@@ -13,10 +13,10 @@
     "node": ">=10"
   },
   "scripts": {
-    "minify": "terser --compress --mangle --output ./dist/WorldMap.js -- ./dist/WorldMap.js; terser --compress --mangle --output ./dist/countries.geo.js -- ./dist/countries.geo.js",
+    "minify": "terser --compress --mangle --output ./dist/WorldMap.js -- ./dist/WorldMap.js&&terser --compress --mangle --output ./dist/countries.geo.js -- ./dist/countries.geo.js",
     "prebuild": "rm -rf dist;eslint . --ext .tsx --fix",
-    "build": "tsc -p tsconfig.json;npm run minify",
-    "build:local": "npm run build;npm pack"
+    "build": "tsc -p tsconfig.json&&npm run minify",
+    "build:local": "npm run build&&npm pack"
   },
   "peerDependencies": {
     "react": ">=16",
