--- a/lib/.eslintrc.json
+++ b/lib/.eslintrc.json
@@ -4,25 +4,27 @@
         "es2021": true
     },
     "extends": [
-        "airbnb-base"
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
         "ecmaVersion": 12,
         "sourceType": "module"
     },
     "plugins": [
+        "react",
         "@typescript-eslint"
     ],
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "rules": {
-        "semi": [
-            "error",
-            "never"
-        ],
-        "indent": [
-            "error",
-            2
-        ],
-        "import/prefer-default-export": "off"
     }
 }
