--- a/lib/package.json
+++ b/lib/package.json
@@ -13,20 +13,23 @@
     "node": ">=10"
   },
   "scripts": {
-    "minify": "terser --compress --mangle --output ./dist/WorldMap.js -- ./dist/WorldMap.js&&terser --compress --mangle --output ./dist/countries.geo.js -- ./dist/countries.geo.js",
+    "minify": "terser --compress --mangle --output ./dist/index.js -- ./dist/index.js && terser --compress --mangle --output ./dist/countries.geo.js -- ./dist/countries.geo.js",
     "prebuild": "rm -rf dist;eslint . --ext .tsx --fix",
-    "build": "tsc -p tsconfig.json&&npm run minify",
-    "build:local": "npm run build&&npm pack"
+    "build": "tsc -p tsconfig.json && yarn minify",
+    "build:local": "yarn build && npm pack"
   },
   "peerDependencies": {
     "react": ">=16",
     "react-dom": ">=16.0.0"
   },
   "dependencies": {
-    "@types/d3-geo": "^1.12.1",
-    "@types/geojson": "^7946.0.7",
     "d3-geo": "^1.11.9",
     "react-path-tooltip": "^1.0.17"
+  },
+  "devDependencies": {
+    "@types/d3-geo": "^1.12.1",
+    "@types/geojson": "^7946.0.7",
+    "terser": "^5.3.3"
   },
   "authors": [
     "yanivam (https://github.com/yanivam)"
@@ -42,17 +45,6 @@
     "countries"
   ],
   "module": "dist/react-svg-worldmap.esm.js",
-  "devDependencies": {
-    "@types/react": "^16.14.5",
-    "@types/react-dom": "^16.9.10",
-    "@typescript-eslint/eslint-plugin": "^4.17.0",
-    "@typescript-eslint/parser": "^4.17.0",
-    "eslint": "^7.22.0",
-    "eslint-plugin-react": "^7.22.0",
-    "terser": "^5.3.3",
-    "tslib": "^1.14.1",
-    "typescript": "^3.8.3"
-  },
   "bugs": "https://github.com/yanivam/react-svg-worldmap/issues",
   "repository": "github:yanivam/react-svg-worldmap"
 }
