--- a/website/package.json
+++ b/website/package.json
@@ -15,8 +15,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "0.0.0-3947",
-    "@docusaurus/preset-classic": "0.0.0-3947",
+    "@docusaurus/core": "^2.0.0-beta.4",
+    "@docusaurus/preset-classic": "^2.0.0-beta.4",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
@@ -29,7 +29,7 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "0.0.0-3947",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.4",
     "@tsconfig/docusaurus": "^1.0.3"
   },
   "browserslist": {
