--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "build:package": "yarn workspace react-svg-worldmap build",
-    "build:website": "yarn workspace react-svg-worldmap-website build",
+    "build:website": "yarn workspace website build",
     "build": "yarn build:package && yarn build:website",
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
