--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "yarn build:package && yarn build:website",
     "lint": "eslint --cache \"**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"**/*.{js,jsx,ts,tsx,json}\"",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\""
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/react": "^17.0.14",
