--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,5 +23,8 @@
     "react": {
       "version": "detect"
     }
+  },
+  "rules": {
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
