--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.22.0",
     "eslint-plugin-react": "^7.22.0",
+    "grunt": "^1.4.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-uglify": "^5.0.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.2.1",
     "tslib": "^1.14.1",
-    "typescript": "^3.8.3"
+    "typescript": "^4.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
