--- a/website/package.json
+++ b/website/package.json
@@ -26,7 +26,7 @@
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-svg-worldmap": "*",
+    "react-svg-worldmap": "^2.0.0-alpha.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
