--- a/website/package.json
+++ b/website/package.json
@@ -15,19 +15,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.6",
-    "@docusaurus/preset-classic": "^2.0.0-beta.6",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.6",
-    "@mdx-js/react": "^1.6.21",
-    "@svgr/webpack": "^5.5.0",
+    "@docusaurus/core": "^2.0.0-beta.15",
+    "@docusaurus/preset-classic": "^2.0.0-beta.15",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.15",
     "clsx": "^1.1.1",
-    "file-loader": "^6.2.0",
-    "prism-react-renderer": "^1.2.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-svg-worldmap": "^2.0.0-alpha.0",
-    "url-loader": "^4.1.1"
+    "react-svg-worldmap": "^2.0.0-alpha.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.0.0-beta.6",
