--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
 
       - name: Get yarn cache
         id: yarn-cache
