--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -2,29 +2,25 @@
   "include": ["src"],
   "compilerOptions": {
     "target": "es2015",
-    "module": "commonjs",
+    "module": "esnext",
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true,
     "importHelpers": true,
     "declaration": true,
     "sourceMap": false,
     "rootDir": "./src",
-    "strict": false,
+    "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "strictPropertyInitialization": true,
     "noImplicitThis": true,
-    "alwaysStrict": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "alwaysStrict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "moduleResolution": "node",
-    "baseUrl": "./",
-    "paths": {
-      "*": ["src/*", "node_modules/*"]
-    },
     "jsx": "react",
     "removeComments": true,
     "esModuleInterop": true
