--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -2,9 +2,11 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@site/*": ["./*"]
-    }
+    },
+    "skipLibCheck": true
   },
   "include": ["src/"]
 }
