chore: upgrade dependencies; compile to CJS
Fix https://github.com/yanivam/react-svg-worldmap/issues/120. The issue seems to
be that we didn't declare `"type": "module"` in our package.json. However, if we
do that, there's the other problem of not being able to import it in CJS with TS
configured with `moduleResolution: NodeNext`. I think a middle ground for now is
to simply compile to CJS.

--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -1,28 +1,11 @@
 {
+  "extends": "tsconfig-jc",
   "include": ["src"],
   "compilerOptions": {
-    "target": "es2015",
-    "module": "esnext",
-    "outDir": "./dist",
-    "allowSyntheticDefaultImports": true,
-    "importHelpers": true,
-    "declaration": true,
-    "sourceMap": false,
-    "rootDir": "./src",
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "moduleResolution": "node",
     "jsx": "react",
-    "removeComments": true,
-    "esModuleInterop": true
+    "module": "commonjs",
+    "target": "esnext",
+    "rootDir": "./src",
+    "outDir": "./dist"
   }
 }
