--- a/package.json
+++ b/package.json
@@ -14,29 +14,21 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/react": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "eslint": "^8.13.0",
-    "eslint-config-jc": "^2.2.0",
+    "@types/react": "^18.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.17.0",
+    "eslint-config-jc": "^2.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
-    "prettier": "^2.6.2",
-    "prettier-config-jc": "^2.2.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.6.3"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{md,mdx}": [
-      "prettier --write"
-    ]
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.1",
+    "prettier": "^2.7.0",
+    "prettier-config-jc": "^2.3.0",
+    "tsconfig-jc": "^2.3.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.3"
   }
 }
