chore: add spellcheck to precommit

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,7 @@
 {
   "*.{js,ts,jsx,tsx}": ["eslint --fix"],
-  "*": ["prettier --ignore-unknown --write"]
+  "*": [
+    "prettier --ignore-unknown --write",
+    "cspell --no-must-find-files --no-progress"
+  ]
 }
