--- a/lib/tsconfig.json
+++ b/lib/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "tsconfig-jc",
   "include": ["src"],
   "compilerOptions": {
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "jsx": "react",
     "module": "commonjs",
     "target": "esnext",
