Revert lib package.json and downgrade d3-geo

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,11 +1,10 @@
 {
   "name": "react-svg-worldmap",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-alpha.11",
   "license": "MIT",
   "displayName": "React Worldmap",
   "description": "A pure react component to draw a map of world countries. Simple. Free.",
-  "exports": "./index.js",
-  "type": "module",
+  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
@@ -18,12 +17,12 @@
     "build:local": "yarn build && npm pack"
   },
   "dependencies": {
-    "d3-geo": "^3.0.1",
+    "d3-geo": "^2.0.2",
     "react-path-tooltip": "^1.0.17",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@types/d3-geo": "^3.0.2",
+    "@types/d3-geo": "^2.0.2",
     "@types/geojson": "^7946.0.10"
   },
   "peerDependencies": {
